objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>CheckBox2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeAppileance_Picklist_check__c</fullName>
        <label>GeAppileance Picklist check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>three</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
                <value>
                    <fullName>Adding new value</fullName>
                    <isActive>false</isActive>
                    <label>Adding new value</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <recordTypes>
        <fullName>geappliancerecordtyep</fullName>
        <active>true</active>
        <label>geappliancerecordtyep</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_Rule_1</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorMessage>Error query</errorMessage>
    </validationRules>
</CustomObject>